--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "stylelint": "stylelint --aei src/**/*.css",
     "pretest": "npm run htmlhint && npm run eslint && npm run stylelint",
     "test": "jest --coverage",
-    "start": "serve -s src/"
+    "start": "serve -s src/",
+    "tst": "jest --watch"
+
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
